# rouge-like-galgame

./: .gitignore  pyproject.toml  settings.json
.claude/: settings.local.json
src/phantom_seed/: config.py  main.py
src/phantom_seed/ai/: gemini_client.py  imagen_client.py  llm.py  prompts.py  protocol.py
src/phantom_seed/ai/chains/: __init__.py  character_chain.py  scene_chain.py
src/phantom_seed/ai/prompts/: __init__.py  character.py  scene.py  system.py  visual.py
src/phantom_seed/core/: coordinator.py  roguelike.py  save_system.py  seed_engine.py  state.py
src/phantom_seed/pipeline/: async_gen.py
src/phantom_seed/ui/: dialogue.py  engine.py  hud.py  main_menu.py  menu.py  save_menu.py  scene.py  settings_menu.py
